--- a/index.html
+++ b/index.html
@@ -66,35 +66,41 @@
     </div>
   </div>
 </section>
-    <!-- Блок 2 - Правила -->
-    <section id="rules" class="min-h-screen flex flex-col justify-center items-center bg-purple-100 text-purple-900 p-8">
-      <h2 class="text-3xl md:text-5xl font-bold mb-8">Правила нашего сервера</h2>
-      <p class="mb-6 text-center max-w-xl">Читы, реклама, использование ботов/таса и ложные доносы — Бан 10к Минут
-Обход бана — Бан 20к минут
-Вредоносные действия бан от 20к минут до навсегда
-Несогласованная реклама - бан 5к минут - повторно - навсегда
-РЕКЛАМА НАБОРА КЛАНА РАЗРЕШЕНО ✓
-Если кто-то выдаёт себя за админа - бан 3к минут
-Намеренный чрезмерный флуд/спам/оск — мут 1000 секунд
-Funvote: бан 120 минут
-Funvote — это когда делают голосование выгнать человека за просто так</p>
-      <button onclick="document.getElementById('links').scrollIntoView({behavior: 'smooth'})"
-        class="px-6 py-3 bg-purple-600 text-white font-semibold rounded-xl shadow-md transform transition hover:scale-105 hover:bg-purple-700">Переход на Расширенные правила</button>
-    </section>
-   <!-- Блок 3 - Расширенные Правила -->
-    <section id="links" class="min-h-screen flex flex-col justify-center items-center bg-purple-50 text-purple-900 p-8">
-      <h2 class="text-3xl md:text-5xl font-bold mb-8">Расширенные Правила</h2>
-      <p>Правила сообщества TeeFusion
+<!-- Блок 2 - Правила -->
+<section id="rules" class="min-h-screen flex flex-col justify-center items-center bg-purple-100 text-purple-900 p-8 transition-all duration-700 overflow-hidden">
+  <h2 class="text-3xl md:text-5xl font-bold mb-8">Правила нашего сервера</h2>
 
-1. Определения
-1.1. TeeSports — игровое сообщество и серверное объединение для развития игровых модов в РФ.
-1.2. Администрация — Zavo (https://t.me/alex_kulin) и ninekeem (https://t.me/ninekeem) (основатели проекта).
-1.3. Команда — все участники проекта (teesports.org/staff) !ссылка не работает.
-1.4. Чат-мост — Telegram-канал для обратной связи, общения и новостей, с доступом к игровым чатам серверов в реальном времени.
+  <p class="mb-6 text-center max-w-xl">
+    Читы, реклама, использование ботов/таса и ложные доносы — Бан 10к Минут<br>
+    Обход бана — Бан 20к минут<br>
+    Вредоносные действия бан от 20к минут до навсегда<br>
+    Несогласованная реклама - бан 5к минут - повторно - навсегда <br>
+    РЕКЛАМА НАБОРА КЛАНА РАЗРЕШЕНО ✓<br>
+    Если кто-то выдаёт себя за админа - бан 3к минут<br>
+    Намеренный чрезмерный флуд/спам/оск — мут 1000 секунд<br>
+    Funvote: бан 120 минут<br>
+    Funvote — это когда делают голосование выгнать человека за просто так
+  </p>
 
-2. Общие правила
-2.1. Подключаясь к серверам TeeSports, вы принимаете данные  правила.
-2.2. Правила распространяются на серверы и социальные площадки: 
+  <button onclick="toggleRules()"
+    class="w-full md:w-1/2 px-6 py-4 bg-purple-600 text-white font-semibold rounded-xl shadow-md transform transition hover:scale-105 hover:bg-purple-700 mb-4">
+    Показать расширенные правила
+  </button>
+
+  <!-- Расширенные Правила (скрытые по умолчанию) -->
+  <div id="extendedRules" class="max-w-4xl mt-6 hidden transition-all duration-700">
+    <p class="text-sm md:text-base text-left">
+      Правила сообщества TeeFusion<br><br>
+
+      <strong>1. Определения</strong><br>
+      1.1. TeeSports — игровое сообщество и серверное объединение для развития игровых модов в РФ.<br>
+      1.2. Администрация — Zavo и ninekeem (основатели проекта).<br>
+      1.3. Команда — все участники проекта.<br>
+      1.4. Чат-мост — Telegram-канал для обратной связи, общения и новостей.<br><br>
+
+      <strong>2. Общие правила</strong><br>
+      2.1. Подключаясь к серверам TeeSports, вы принимаете данные правила.<br>
+      2.2. Правила распространяются на серверы и социальные площадки: 
 Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/TeeSports),Telegram TS-News (https://t.me/TeeSports_News) 
 (подключись чтобы быть в курсе новостей сообщества).
 2.3. Администрация оставляет за собой право изменять правила без уведомления.
@@ -153,12 +159,44 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
 • логи/скриншоты, 
 • демо/видео.
 8.3. В срочной ситуации можно "пингануть" модератора или администратора в игровом чате, написав его телеграм-тег (не относится к Ki-o) или телеграмм-канале TeeSports; злоупотребление запрещено.
+<br><br>
 
-9. Технические особенности
-9.1 Сервера сообщества имеют префикс TeeSports.
-9.2. Правила на арендованных серверах могут отличаться от правил сообщества (серверы Ki-o).
-9.3. На серверах установлен AntiVPN. Ссылки на каналы НЕ РАБОТАЮТ. Единственная ссылка что есть это https://t.me/TeeFusionTW (подача тикетов и т.п) https://t.me/TeeFusionNews (новости).</p>
-    </section>
+      <strong>9. Технические особенности</strong><br>
+      9.1 Сервера сообщества имеют префикс TeeSports.<br>
+      9.2. Правила на арендованных серверах могут отличаться от правил сообщества.<br>
+      9.3. На серверах установлен AntiVPN.<br><br>
+
+      Ссылки:<br>
+      https://t.me/TeeFusionTW (подача тикетов и т.п)<br>
+      https://t.me/TeeFusionNews (новости).
+    </p>
+  </div>
+</section>
+
+<script>
+  let isOpen = false;
+  function toggleRules() {
+    const rulesSection = document.getElementById('rules');
+    const extendedRules = document.getElementById('extendedRules');
+    const button = event.currentTarget;
+
+    if (!isOpen) {
+      extendedRules.classList.remove('hidden');
+      button.innerText = "Скрыть расширенные правила";
+
+      // Увеличение ширины фона при открытии
+      rulesSection.classList.add('md:px-40');
+    } else {
+      extendedRules.classList.add('hidden');
+      button.innerText = "Показать расширенные правила";
+
+      // Возвращение ширины фона при закрытии
+      rulesSection.classList.remove('md:px-40');
+    }
+
+    isOpen = !isOpen;
+  }
+</script>
 
     <!-- Блок 4 - Администрация -->
   <section id="admins" class="min-h-screen flex flex-col justify-center items-center bg-gradient-to-b from-purple-300 to-purple-500 text-white p-8">
