--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   </button>
 
   <!-- Расширенные Правила (скрытые по умолчанию) -->
-  <div id="extendedRules" class="max-w-4xl mt-6 hidden transition-all duration-700">
-    <p class="text-sm md:text-base text-left">
+  <div id="extendedRules" class="max-w-4xl mt-6 overflow-hidden transition-all duration-700 ease-in-out max-h-0 opacity-0">
+    <p class="text-sm md:text-base text-left py-4">
       Правила сообщества TeeFusion<br><br>
 
       <strong>1. Определения</strong><br>
@@ -100,70 +100,12 @@
 
       <strong>2. Общие правила</strong><br>
       2.1. Подключаясь к серверам TeeSports, вы принимаете данные правила.<br>
-      2.2. Правила распространяются на серверы и социальные площадки: 
-Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/TeeSports),Telegram TS-News (https://t.me/TeeSports_News) 
-(подключись чтобы быть в курсе новостей сообщества).
-2.3. Администрация оставляет за собой право изменять правила без уведомления.
-2.4. Решения Администрации и Команды окончательны, но могут быть обжалованы в теме "Feedback (https://t.me/TeeSports/2136093)".
-2.5. Повторные нарушения ведут к усилению наказания, градации которого определяются индивидуально.
-2.6. Будьте вежливы и уважительны к другим игрокам. 
-2.7. Вы можете внести вклад в развитие сообщества путём доната, спонсорства мероприятий и иной помощи в рамках ваших компетенций. Мы открыты к сотрудничеству и признательны игровому сообществу, которое нас поддерживает.
-
-3. Поведение и использование чата, ника, тега.
-3.1. Запрещены оскорбления, спам, флуд, токсичность, политические темы. Это также касается никнеймов и клан-тегов.
-3.2. Запрещены затяжные конфликты и агрессивные дискуссии.
-3.3. Запрещено выдавать себя за члена Команды TeeSports или использовать схожие никнеймы, вводящие в заблуждение.
-
-4. Правила использования серверов
-4.1. Запрещены вредоносные действия по отношению к серверам и сообществу.
-4.2. Запрещены боты, читы и модификации, дающие преимущество и их реклама.
-4.3. Запрещены ложные доносы на других игроков.
-4.4. Запрещена несогласованная реклама.
-4.5. Карты и моды являются собственностью сообщества TeeSports и их авторов.
-
-5. Особенности геймплея
-5.1. Запрещено необоснованное голосование на бан игроков.
-5.2. Запрещено исключение игроков для удержания сервера.
-5.3. Запрещено игнорировать концепцию геймплея мода и мешать команде.
-5.4. Разрешены "Динамическая камера" и "Кемперство".
-
-6. Наказания
-6.1. Администрация вправе корректировать меры наказания индивидуально.
-6.2. Нарушение правил чата и никнеймов (п. 3.1, 3.2):
-Предупреждение / мут / бан 5-120 минут.
-6.3. Нарушение правил геймплея (п. 5.1, 5.2, 5.3):
-Предупреждение / бан 10-120 минут.
-6.4. Попытка входа в RCON: 
-Бан 60 минут.
-6.5. Несогласованная реклама (п. 4.4):
-Бан 5000 минут, при повторном нарушении - перманентный бан.
-6.6. Имперсонация членов Команды (п. 3.3):
-Бан 3000 минут.
-6.7. Читы, их реклама, использование ботов и ложные доносы (п. 4.2, 4.3):
-Бан 10 000 минут / перманентный + обнуление статистики.
-6.8. Обход бана (VPN/Proxy):
-Бан 20 000 минут.
-6.9. Вредоносные действия по отношению к сообществу (п. 4.1):
-Бан от 20000 до перманентного, лишение прав при их наличии.
-
-7. Обязанности и права модераторов
-7.1. Модераторы обязаны быть объективны и вежливы.
-7.2. Все действия модераторов должны быть обоснованы и задокументированы.
-
-8. Связь с администрацией и жалобы
-8.1. Сообщить о неполадках или предложениях можно в теме "Feedback (https://t.me/TeeSports/2136093)" в телеграмм-канале.
-8.2. Жалобы на игроков и модерацию принимаются в теме "Feedback (https://t.me/TeeSports/2136093)" с приложением: 
-• своего и чужих ников, 
-• время, имя сервера, 
-• подробностями ситуации, 
-• логи/скриншоты, 
-• демо/видео.
-8.3. В срочной ситуации можно "пингануть" модератора или администратора в игровом чате, написав его телеграм-тег (не относится к Ki-o) или телеграмм-канале TeeSports; злоупотребление запрещено.
+     2.2. Правила распространяются на серверы и социальные площадки: Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/TeeSports),Telegram TS-News (https://t.me/TeeSports_News) (подключись чтобы быть в курсе новостей сообщества). 2.3. Администрация оставляет за собой право изменять правила без уведомления. 2.4. Решения Администрации и Команды окончательны, но могут быть обжалованы в теме "Feedback (https://t.me/TeeSports/2136093)". 2.5. Повторные нарушения ведут к усилению наказания, градации которого определяются индивидуально. 2.6. Будьте вежливы и уважительны к другим игрокам. 2.7. Вы можете внести вклад в развитие сообщества путём доната, спонсорства мероприятий и иной помощи в рамках ваших компетенций. Мы открыты к сотрудничеству и признательны игровому сообществу, которое нас поддерживает. 3. Поведение и использование чата, ника, тега. 3.1. Запрещены оскорбления, спам, флуд, токсичность, политические темы. Это также касается никнеймов и клан-тегов. 3.2. Запрещены затяжные конфликты и агрессивные дискуссии. 3.3. Запрещено выдавать себя за члена Команды TeeSports или использовать схожие никнеймы, вводящие в заблуждение. 4. Правила использования серверов 4.1. Запрещены вредоносные действия по отношению к серверам и сообществу. 4.2. Запрещены боты, читы и модификации, дающие преимущество и их реклама. 4.3. Запрещены ложные доносы на других игроков. 4.4. Запрещена несогласованная реклама. 4.5. Карты и моды являются собственностью сообщества TeeSports и их авторов. 5. Особенности геймплея 5.1. Запрещено необоснованное голосование на бан игроков. 5.2. Запрещено исключение игроков для удержания сервера. 5.3. Запрещено игнорировать концепцию геймплея мода и мешать команде. 5.4. Разрешены "Динамическая камера" и "Кемперство". 6. Наказания 6.1. Администрация вправе корректировать меры наказания индивидуально. 6.2. Нарушение правил чата и никнеймов (п. 3.1, 3.2): Предупреждение / мут / бан 5-120 минут. 6.3. Нарушение правил геймплея (п. 5.1, 5.2, 5.3): Предупреждение / бан 10-120 минут. 6.4. Попытка входа в RCON: Бан 60 минут. 6.5. Несогласованная реклама (п. 4.4): Бан 5000 минут, при повторном нарушении - перманентный бан. 6.6. Имперсонация членов Команды (п. 3.3): Бан 3000 минут. 6.7. Читы, их реклама, использование ботов и ложные доносы (п. 4.2, 4.3): Бан 10 000 минут / перманентный + обнуление статистики. 6.8. Обход бана (VPN/Proxy): Бан 20 000 минут. 6.9. Вредоносные действия по отношению к сообществу (п. 4.1): Бан от 20000 до перманентного, лишение прав при их наличии. 7. Обязанности и права модераторов 7.1. Модераторы обязаны быть объективны и вежливы. 7.2. Все действия модераторов должны быть обоснованы и задокументированы. 8. Связь с администрацией и жалобы 8.1. Сообщить о неполадках или предложениях можно в теме "Feedback (https://t.me/TeeSports/2136093)" в телеграмм-канале. 8.2. Жалобы на игроков и модерацию принимаются в теме "Feedback (https://t.me/TeeSports/2136093)" с приложением: • своего и чужих ников, • время, имя сервера, • подробностями ситуации, • логи/скриншоты, • демо/видео. 8.3. В срочной ситуации можно "пингануть" модератора или администратора в игровом чате, написав его телеграм-тег (не относится к Ki-o) или телеграмм-канале TeeSports; злоупотребление запрещено.
 <br><br>
 
       <strong>9. Технические особенности</strong><br>
       9.1 Сервера сообщества имеют префикс TeeSports.<br>
-      9.2. Правила на арендованных серверах могут отличаться от правил сообщества.<br>
+      9.2. Правила на арендованных серверах могут отличаться.<br>
       9.3. На серверах установлен AntiVPN.<br><br>
 
       Ссылки:<br>
@@ -181,22 +123,23 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
     const button = event.currentTarget;
 
     if (!isOpen) {
-      extendedRules.classList.remove('hidden');
+      // Открытие
+      extendedRules.style.maxHeight = extendedRules.scrollHeight + 'px';
+      extendedRules.style.opacity = '1';
       button.innerText = "Скрыть расширенные правила";
-
-      // Увеличение ширины фона при открытии
       rulesSection.classList.add('md:px-40');
     } else {
-      extendedRules.classList.add('hidden');
+      // Закрытие
+      extendedRules.style.maxHeight = '0px';
+      extendedRules.style.opacity = '0';
       button.innerText = "Показать расширенные правила";
-
-      // Возвращение ширины фона при закрытии
       rulesSection.classList.remove('md:px-40');
     }
 
     isOpen = !isOpen;
   }
 </script>
+
 
     <!-- Блок 4 - Администрация -->
   <section id="admins" class="min-h-screen flex flex-col justify-center items-center bg-gradient-to-b from-purple-300 to-purple-500 text-white p-8">
