--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
       scroll-behavior: smooth;
     }
     /* Custom gradients for smooth transitions */
-    .bg-gradient-frame-1 {
-      background: linear-gradient(to bottom, #ede9fe 0%, #c4b5fd 100%);
-    }
-    .bg-gradient-frame-2 {
-      background: linear-gradient(to top, #ede9fe 0%, #c4b5fd 48%, #a78bfa 100%);
-    }
-    .bg-gradient-frame-3 {
-      background: linear-gradient(to top, #c4b5fd 0%, #a78bfa 60%, #8b5cf6 100%);
-    }
-    .bg-gradient-frame-4 {
-      background: linear-gradient(to top, #a78bfa 0%, #c4b5fd 60%, #ede9fe 100%);
-    }
-    .bg-gradient-frame-5 {
-      background: linear-gradient(to top, #c4b5fd 0%, #ede9fe 100%);
-    }
+.bg-gradient-frame-1 {
+  background: linear-gradient(to bottom, #ede9fe 0%, #d1c4e9 100%);
+}
+.bg-gradient-frame-2 {
+  background: linear-gradient(to bottom, #d1c4e9 0%, #b39ddb 100%);
+}
+.bg-gradient-frame-3 {
+  background: linear-gradient(to bottom, #b39ddb 0%, #9575cd 100%);
+}
+.bg-gradient-frame-4 {
+  background: linear-gradient(to bottom, #9575cd 0%, #7e57c2 100%);
+}
+.bg-gradient-frame-5 {
+  background: linear-gradient(to bottom, #7e57c2 0%, #ede9fe 100%);
+}
     /* Make sure sections cover the viewport */
     section {
       min-height: 100vh;
