--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     }
     /* Custom gradients for smooth transitions */
 .bg-gradient-frame-1 {
-  background: linear-gradient(to bottom, #ede9fe 0%, #d1c4e9 100%);
+  background: linear-gradient(to bottom, #f3e6fa 0%, #e1c7f7 100%);
 }
 .bg-gradient-frame-2 {
-  background: linear-gradient(to bottom, #d1c4e9 0%, #b39ddb 100%);
+  background: linear-gradient(to bottom, #e1c7f7 0%, #c69af6 100%);
 }
 .bg-gradient-frame-3 {
-  background: linear-gradient(to bottom, #b39ddb 0%, #9575cd 100%);
+  background: linear-gradient(to bottom, #c69af6 0%, #a76de1 100%);
 }
 .bg-gradient-frame-4 {
-  background: linear-gradient(to bottom, #9575cd 0%, #7e57c2 100%);
+  background: linear-gradient(to bottom, #a76de1 0%, #8147b8 100%);
 }
 .bg-gradient-frame-5 {
-  background: linear-gradient(to bottom, #7e57c2 0%, #ede9fe 100%);
+  background: linear-gradient(to bottom, #8147b8 0%, #f3e6fa 100%);
 }
     /* Make sure sections cover the viewport */
     section {
