--- a/index.html
+++ b/index.html
@@ -93,69 +93,69 @@
       1.1. TeeSports — игровое сообщество и серверное объединение для развития игровых модов в РФ.<br>
       1.2. Администрация — Zavo и ninekeem (основатели проекта).<br>
       1.3. Команда — все участники проекта.<br>
-      1.4. Чат-мост — Telegram-канал для обратной связи, общения и новостей.<br>
+      1.4. Чат-мост — Telegram-канал для обратной связи, общения и новостей.<br><br>
 
       <strong>2. Общие правила</strong><br>
-      2.1. Подключаясь к серверам TeeSports, вы принимаете данные правила.
+      2.1. Подключаясь к серверам TeeSports, вы принимаете данные правила.<br>
     2.2. Правила распространяются на серверы и социальные площадки: 
 Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/TeeSports),Telegram TS-News (https://t.me/TeeSports_News) 
-(подключись чтобы быть в курсе новостей сообщества).
-2.3. Администрация оставляет за собой право изменять правила без уведомления.
-2.4. Решения Администрации и Команды окончательны, но могут быть обжалованы в теме "Feedback (https://t.me/TeeSports/2136093)".
-2.5. Повторные нарушения ведут к усилению наказания, градации которого определяются индивидуально.
-2.6. Будьте вежливы и уважительны к другим игрокам. 
-2.7. Вы можете внести вклад в развитие сообщества путём доната, спонсорства мероприятий и иной помощи в рамках ваших компетенций. Мы открыты к сотрудничеству и признательны игровому сообществу, которое нас поддерживает.<br>
+(подключись чтобы быть в курсе новостей сообщества).<br>
+2.3. Администрация оставляет за собой право изменять правила без уведомления.<br>
+2.4. Решения Администрации и Команды окончательны, но могут быть обжалованы в теме "Feedback (https://t.me/TeeSports/2136093)".<br>
+2.5. Повторные нарушения ведут к усилению наказания, градации которого определяются индивидуально.<br>
+2.6. Будьте вежливы и уважительны к другим игрокам. <br>
+2.7. Вы можете внести вклад в развитие сообщества путём доната, спонсорства мероприятий и иной помощи в рамках ваших компетенций. Мы открыты к сотрудничеству и признательны игровому сообществу, которое нас поддерживает.<br><br>
 
-3. Поведение и использование чата, ника, тега.
-3.1. Запрещены оскорбления, спам, флуд, токсичность, политические темы. Это также касается никнеймов и клан-тегов.
-3.2. Запрещены затяжные конфликты и агрессивные дискуссии.
-3.3. Запрещено выдавать себя за члена Команды TeeSports или использовать схожие никнеймы, вводящие в заблуждение.<br>
+3. Поведение и использование чата, ника, тега.<br>
+3.1. Запрещены оскорбления, спам, флуд, токсичность, политические темы. Это также касается никнеймов и клан-тегов.<br>
+3.2. Запрещены затяжные конфликты и агрессивные дискуссии.<br>
+3.3. Запрещено выдавать себя за члена Команды TeeSports или использовать схожие никнеймы, вводящие в заблуждение.<br><br>
 
-4. Правила использования серверов
-4.1. Запрещены вредоносные действия по отношению к серверам и сообществу.
-4.2. Запрещены боты, читы и модификации, дающие преимущество и их реклама.
-4.3. Запрещены ложные доносы на других игроков.
-4.4. Запрещена несогласованная реклама.
-4.5. Карты и моды являются собственностью сообщества TeeSports и их авторов.<br>
+4. Правила использования серверов<br>
+4.1. Запрещены вредоносные действия по отношению к серверам и сообществу.<br>
+4.2. Запрещены боты, читы и модификации, дающие преимущество и их реклама.<br>
+4.3. Запрещены ложные доносы на других игроков.<br>
+4.4. Запрещена несогласованная реклама.<br>
+4.5. Карты и моды являются собственностью сообщества TeeSports и их авторов.<br><br>
 
-5. Особенности геймплея
-5.1. Запрещено необоснованное голосование на бан игроков.
-5.2. Запрещено исключение игроков для удержания сервера.
-5.3. Запрещено игнорировать концепцию геймплея мода и мешать команде.
-5.4. Разрешены "Динамическая камера" и "Кемперство".<br>
+5. Особенности геймплея<br>
+5.1. Запрещено необоснованное голосование на бан игроков.<br>
+5.2. Запрещено исключение игроков для удержания сервера.<br>
+5.3. Запрещено игнорировать концепцию геймплея мода и мешать команде.<br>
+5.4. Разрешены "Динамическая камера" и "Кемперство".<br><br>
 
-6. Наказания
-6.1. Администрация вправе корректировать меры наказания индивидуально.
+6. Наказания<br>
+6.1. Администрация вправе корректировать меры наказания индивидуально.<br>
 6.2. Нарушение правил чата и никнеймов (п. 3.1, 3.2):
-Предупреждение / мут / бан 5-120 минут.
+Предупреждение / мут / бан 5-120 минут.<br>
 6.3. Нарушение правил геймплея (п. 5.1, 5.2, 5.3):
-Предупреждение / бан 10-120 минут.
+Предупреждение / бан 10-120 минут.<br>
 6.4. Попытка входа в RCON: 
-Бан 60 минут.
+Бан 60 минут.<br>
 6.5. Несогласованная реклама (п. 4.4):
-Бан 5000 минут, при повторном нарушении - перманентный бан.
+Бан 5000 минут, при повторном нарушении - перманентный бан.<br>
 6.6. Имперсонация членов Команды (п. 3.3):
-Бан 3000 минут.
+Бан 3000 минут.<br>
 6.7. Читы, их реклама, использование ботов и ложные доносы (п. 4.2, 4.3):
-Бан 10 000 минут / перманентный + обнуление статистики.
+Бан 10 000 минут / перманентный + обнуление статистики.<br>
 6.8. Обход бана (VPN/Proxy):
-Бан 20 000 минут.
+Бан 20 000 минут.<br>
 6.9. Вредоносные действия по отношению к сообществу (п. 4.1):
-Бан от 20000 до перманентного, лишение прав при их наличии.<br>
+Бан от 20000 до перманентного, лишение прав при их наличии.<br><br>
 
-7. Обязанности и права модераторов
-7.1. Модераторы обязаны быть объективны и вежливы.
-7.2. Все действия модераторов должны быть обоснованы и задокументированы.<br>
+7. Обязанности и права модераторов<br>
+7.1. Модераторы обязаны быть объективны и вежливы.<br>
+7.2. Все действия модераторов должны быть обоснованы и задокументированы.<br><br>
 
-8. Связь с администрацией и жалобы
-8.1. Сообщить о неполадках или предложениях можно в теме "Feedback (https://t.me/TeeSports/2136093)" в телеграмм-канале.
-8.2. Жалобы на игроков и модерацию принимаются в теме "Feedback (https://t.me/TeeSports/2136093)" с приложением: 
-• своего и чужих ников, 
-• время, имя сервера, 
-• подробностями ситуации, 
-• логи/скриншоты, 
-• демо/видео.
-8.3. В срочной ситуации можно "пингануть" модератора или администратора в игровом чате, написав его телеграм-тег (не относится к Ki-o) или телеграмм-канале TeeSports; злоупотребление запрещено.
+8. Связь с администрацией и жалобы<br>
+8.1. Сообщить о неполадках или предложениях можно в теме "Feedback (https://t.me/TeeSports/2136093)" в телеграмм-канале.<br>
+8.2. Жалобы на игроков и модерацию принимаются в теме "Feedback (https://t.me/TeeSports/2136093)" с приложением: <br>
+• своего и чужих ников, <br>
+• время, имя сервера, <br>
+• подробностями ситуации, <br>
+• логи/скриншоты, <br>
+• демо/видео.<br>
+8.3. В срочной ситуации можно "пингануть" модератора или администратора в игровом чате, написав его телеграм-тег (не относится к Ki-o) или телеграмм-канале TeeSports; злоупотребление запрещено.<br>
 
       <strong>9. Технические особенности</strong><br>
       9.1 Сервера сообщества имеют префикс TeeSports.<br>
@@ -164,12 +164,12 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
 
       Ссылки:<br>
       https://t.me/TeeFusionTW (подача тикетов и т.п)<br>
-      https://t.me/TeeFusionNews (новости).<br>
+      https://t.me/TeeFusionNews (новости).<br><br>
 
-9. Технические особенности
-9.1 Сервера сообщества имеют префикс TeeSports.
-9.2. Правила на арендованных серверах могут отличаться от правил сообщества (серверы Ki-o).
-9.3. На серверах установлен AntiVPN.
+9. Технические особенности<br>
+9.1 Сервера сообщества имеют префикс TeeSports.<br>
+9.2. Правила на арендованных серверах могут отличаться от правил сообщества (серверы Ki-o).<br>
+9.3. На серверах установлен AntiVPN.<br>
     </p>
     </div>
   </section>
