--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ Discord (https://discord.gg/SyYZj7xZYS), Telegram Чат-мост (https://t.me/
     </div>
 
     <!-- Скидки -->
-    <h3 class="text-2xl font-bold mb-4 text-purple-900">Скидки</h3>
+    <h3 class="text-2xl font-bold mb-4 text-purple-900">↑Скидки↑</h3>
     <div class="bg-purple-200 rounded-2xl shadow-lg p-6 w-full max-w-md">
       <ul class="space-y-2 text-center text-purple-900 font-medium">
         <li>Уровень 10 = 149 ₽</li>
